--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather-app",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -26,5 +26,23 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0"
+  },
+  "vue": {
+    "pwa": {
+      "name": "App del Clima",
+      "themeColor": "#d37a3e",
+      "msTileColor": "#000000",
+      "appleMobileWebAppCapable": "yes",
+      "appleMobileWebAppStatusBarStyle": "black",
+      "workboxPluginMode": "GenerateSW",
+      "manifestOptions": {
+        "name": "App del Clima",
+        "short_name": "AppClima",
+        "icons": [
+          {"src":"./img/icons/myicon.png","sizes":"512x512","type":"image/png"}
+        ],
+        "background_color": "#d3961c"
+      }
+    }
   }
 }
